# EC530_project

./: .coverage  Layers_of_the_Ocean.docx  README.md  Water_Cycle.txt  documents.db  main.py  pyproject.toml  requirements.txt  tests.db
.github/workflows/: blank.yml
analyzer/: cli.py  feedback.py  generator.py  grader.py  llm.py  parser.py
autoteacherai/: main.py
autoteacherai/analyzer/: cli.py  feedback.py  generator.py  grader.py  llm.py  parser.py
autoteacherai/database/: operations.py
autoteacherai/outputs/: writeback.py
database/: documents.db  models.py  operations.py
outputs/: writeback.py
tests/: .coverage  analyzer_test.py  cli_test.py  database_test.py  feedback_test.py  generator_test.py  grader_test.py  llm_test.py  outputs_test.py  parser_test.py
